--- a/BusStorm.Sockets/BusStorm.Sockets.ServerLoadTest/BusStorm.Sockets.ServerLoadTest.csproj
+++ b/BusStorm.Sockets/BusStorm.Sockets.ServerLoadTest/BusStorm.Sockets.ServerLoadTest.csproj
@@ -47,6 +47,12 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\BusStorm.Sockets.csproj">
+      <Project>{1B6F9617-9002-4582-B234-72EBFF02E8FB}</Project>
+      <Name>BusStorm.Sockets</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
