--- a/BusStorm.Sockets/BusStorm.Sockets.csproj
+++ b/BusStorm.Sockets/BusStorm.Sockets.csproj
@@ -56,9 +56,11 @@
   <ItemGroup>
     <Compile Include="BusClientConnection.cs" />
     <Compile Include="BusClientSocket.cs" />
+    <Compile Include="BusCryptor.cs" />
     <Compile Include="BusExtensions.cs" />
     <Compile Include="BusMessage.cs" />
     <Compile Include="BusServerSocket.cs" />
+    <Compile Include="IChannelWriter.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="BusCommands.cs" />
   </ItemGroup>
