--- a/BusStorm.Sockets/packages/repositories.config
+++ b/BusStorm.Sockets/packages/repositories.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <repositories>
+  <repository path="..\..\BusStorm.SimpleMessage\packages.config" />
   <repository path="..\..\BusStorm.Sockets.ServerConsole\packages.config" />
   <repository path="..\BusStorm.Sockets.ClientLoadTest\packages.config" />
   <repository path="..\packages.config" />
