--- a/BusStorm.SimpleMessage/BusStorm.SimpleMessage.csproj
+++ b/BusStorm.SimpleMessage/BusStorm.SimpleMessage.csproj
@@ -4,16 +4,15 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{5B22DB5E-51EA-462E-96FB-9BA1FC117CC2}</ProjectGuid>
-    <OutputType>Exe</OutputType>
+    <ProjectGuid>{0BCFAE8B-BEBE-4234-8E46-DBCEA3C19FB2}</ProjectGuid>
+    <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>BusStorm.Sockets.ClientConsole</RootNamespace>
-    <AssemblyName>BusStorm.Sockets.ClientConsole</AssemblyName>
+    <RootNamespace>BusStorm.SimpleMessage</RootNamespace>
+    <AssemblyName>BusStorm.SimpleMessage</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
@@ -23,7 +22,6 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
     <OutputPath>bin\Release\</OutputPath>
@@ -32,6 +30,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Newtonsoft.Json">
+      <HintPath>..\BusStorm.Sockets\packages\Newtonsoft.Json.5.0.8\lib\net45\Newtonsoft.Json.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -41,16 +42,21 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Program.cs" />
+    <Compile Include="BusCommands.cs" />
+    <Compile Include="BusCryptor.cs" />
+    <Compile Include="BusExtensions.cs" />
+    <Compile Include="BusMessage.cs" />
+    <Compile Include="IChannelWriter.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SimpleBusMessageProtocolFactory.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="App.config" />
+    <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\BusStorm.SimpleMessage\BusStorm.SimpleMessage.csproj">
-      <Project>{0BCFAE8B-BEBE-4234-8E46-DBCEA3C19FB2}</Project>
-      <Name>BusStorm.SimpleMessage</Name>
+    <ProjectReference Include="..\BusStorm.Logging\BusStorm.Logging.csproj">
+      <Project>{19e86ec5-579c-4c2e-92a0-38e76ee718dc}</Project>
+      <Name>BusStorm.Logging</Name>
     </ProjectReference>
     <ProjectReference Include="..\BusStorm.Sockets\BusStorm.Sockets.csproj">
       <Project>{1B6F9617-9002-4582-B234-72EBFF02E8FB}</Project>
